# table_reservation

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: main.py
app/core/: config.py  database.py
app/dependencies/: services.py
app/models/: reservation.py  table.py
app/repositories/: base.py  reservation_repo.py  table_repo.py
app/routers/: reservations.py  tables.py
app/schemas/: reservation.py  table.py
app/services/: base.py  reservation_service.py  table_service.py
migrations/: env.py
migrations/versions/: 6153897d7295_create_tables_and_reservations.py
tests/: conftest.py  docker-compose.test.yml  test_reservations.py  test_tables.py
