[project]
name = "table-reservation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "pydantic-settings>=2.8.1",
    "pytest-asyncio>=0.26.0",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.0",
]
