[project]
name = "table-reservation"
version = "0.1.0"
description = "Restaurant Reservation API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "pydantic-settings>=2.8.1",
    "pytest-asyncio>=0.26.0",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.0",
]


# Pytest config
# Define Python path for test discovery
# This ensures that pytest recognizes modules inside the "app" directory
[tool.pytest.ini_options]
pythonpath = [
".", "app"
]
# Enable automatic handling of async tests
# This allows pytest to handle async functions without needing
# the @pytest.mark.asyncio decorator on every async test
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
